--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #4f92737e;
+  min-height: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(12px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-button {
+  color: #092b35;
 }
 
 @keyframes App-logo-spin {
