--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,13 @@
 
 .App-header {
   background-color: #4f92737e;
-  min-height: 35vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(12px + 2vmin);
-  color: white;
+  color: rgb(214, 10, 27);
 }
 
 .App-button {
